Hero section url form and hero button complete

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,15 @@
 /* ************* IMPORT GOOGLE FONT *************** */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 
 /* ******* GLOBAL STYLES********* */
 *,
 *::before,
-*::after{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-:root{
-
+:root {
   /* VARIABLES */
 
   /* Primary colors */
@@ -28,15 +25,8 @@ box-sizing: border-box;
   --very-dark-blue: hsl(255, 11%, 22%);
   --very-dark-violet: hsl(260, 8%, 14%);
   --white: #fff;
-  --background: #EFF1F7;
-
+  --background: hsla(225, 32%, 95%, 1);
 }
 html {
-
-font-family: poppins, sans-serif;
-
+  font-family: poppins, sans-serif;
 }
-
-
-
-
