--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ nav {
   display: flex;
   overflow: hidden;
   align-items: center;
-  padding-bottom: 10rem;
+  padding-bottom: 6rem;
 }
 .info {
   width: 50%;
@@ -89,3 +89,43 @@ nav {
 }
 
 /* ********* short ******* */
+.short {
+  background-color: var(--background);
+}
+
+form {
+  background-image: url(./images/bg-shorten-desktop.svg);
+  background-repeat: no-repeat, repeat;
+  background-position: center;
+  background-size: fill;
+  background-color: var(--dark-violet);
+  padding: 52px 65px;
+  width: 100%;
+  transform: translateY(-50%);
+  border-radius: 10px;
+}
+
+input {
+  height: 64px;
+  border-radius: 9px;
+}
+
+input {
+  width: 70%;
+  font-size: 1rem;
+  padding-left: 20px;
+}
+
+.lg-rect-btn {
+  border-radius: 9px;
+  background-color: var(--cyan);
+  color: white;
+}
+form a {
+  width: 50%;
+  padding: 20px 44px;
+  height: 64px;
+  text-decoration: none;
+  margin-left: 10px;
+  font-weight: 700;
+}
