--- a/src/App.css
+++ b/src/App.css
@@ -59,12 +59,12 @@ nav {
 }
 .mobile-nav {
   /* background-color: blue; */
-  width: 5.5vw;
+  width: 7vw;
   height: 23px;
 }
 .line {
   background-color: black;
-  height: 0.3rem;
+  height: 0.25rem;
 }
 
 /* ************* HERO ************* */
@@ -178,6 +178,9 @@ form a {
 @media only screen and (max-width: 600px) {
   body {
     background-color: var(--white);
+  }
+  header {
+    padding: 2.5rem 0;
   }
 
   /* HIDE NAVLINKS ON MOBILE */
