--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,43 @@ form {
   border-radius: 10px;
 }
 
+#form {
+  display: flex;
+  flex-direction: column;
+}
+.shorten-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 20px 20px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.short-link {
+  color: var(--cyan);
+}
+.copy-button {
+  background-color: var(--cyan);
+  padding: 10px 30px;
+  border: none;
+  color: var(--white);
+  border-radius: 5px;
+  font-size: 1em;
+  font-weight: bold;
+  margin-left: 15px;
+}
+.btn-clicked {
+  background-color: var(--dark-violet);
+  padding: 10px 30px;
+  border: none;
+  color: var(--white);
+  border-radius: 5px;
+  font-size: 1em;
+  font-weight: bold;
+  margin-left: 15px;
+}
+
 input {
   height: 64px;
   border-radius: 9px;
@@ -384,6 +421,34 @@ form a {
   form a {
     margin-top: 10px;
     text-align: center;
+  }
+
+  .shorten-link {
+    flex-direction: column;
+    align-items: unset;
+  }
+  .long-link {
+    font-size: 0.8em;
+  }
+  .short-link {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    border-top: 1px solid lightgray;
+    padding-top: 10px;
+  }
+
+  .copy-button {
+    display: block;
+    width: 100%;
+    margin-left: 0;
+    margin-top: 5px;
+  }
+
+  .btn-clicked {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 5px;
   }
 
   /* STATS */
